TestSuite/errors/err0129.pas
uses GraphABC;

type TRec = record
a : integer;
b : Color;
end;

var 
s : TRec := (a:2;b:4);
begin
end.